--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,13 @@ tags
 
 # End of https://www.toptal.com/developers/gitignore/api/c,vim,emacs
 
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+### Above combination will ignore all files without extension ###
